'分离了样式文件和依赖文件'

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Wisdom-classroom</title>
+  <link href="/static/bundle.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-  <!-- <script src="/static/vendor.bundle.js"></script> -->
-  <script src="/static/bundle.js"></script>
+  <script async src="/static/manifest.js"></script>
+  <script async src="/static/vendor.js"></script>
+  <script async src="/static/bundle.js"></script>
 </body>
 </html>
