--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
   <title>Wisdom-classroom</title>
   <body>
     <!-- <script src="vendor.bundle.js"></script> -->
+  	<link href="bundle.css" rel="stylesheet" type="text/css"/>
     <script src="bundle.js"></script>
   </body>
 </html>
