--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,7 @@
 <html>
-  <title>React-Babel-Webpack Boileplate</title>
+  <title>Wisdom-classroom</title>
   <body>
-    <script type="text/javascript" src="bundle.js"></script>
+    <!-- <script src="vendor.bundle.js"></script> -->
+    <script src="bundle.js"></script>
   </body>
 </html>
