--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>React-Babel-Webpack Boileplate</title>
+  <title>Wisdom-classroom</title>
 </head>
 <body>
-  <script type="text/javascript" src="./build/bundle.js"></script>
+  <!-- <script src="/static/vendor.bundle.js"></script> -->
+  <script src="/static/bundle.js"></script>
 </body>
 </html>
