'Code-Splitting_with_routes'

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <link href="/static/bundle.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-  <script async src="/static/manifest.js"></script>
-  <script async src="/static/vendor.js"></script>
-  <script async src="/static/bundle.js"></script>
+  <!-- <script async src="/static/manifest.js"></script> -->
+  <script src="/static/vendor.js"></script>
+  <script src="/static/main.js"></script>
 </body>
 </html>
